content fixes and update to font-awesome 4.2

--- a/_layouts/developer.html
+++ b/_layouts/developer.html
@@ -60,7 +60,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I'm a young and motivated Software Developer and have collected experience mainly in C++. My work-related interest are in GUI, Games and Gamedevelopment, but I also like Graphicsprogramming and Imageprocessing. </p>    
+                            <p>I'm a young and motivated Software Developer and have gained experience mainly in C++. My work-related interests are in GUI, Games and Gamedevelopment, but I also like Graphicsprogramming and Imageprocessing. </p>    
          
                              <p>I live with my family in a lovely town in Germany. In my spare time, I love to do sports and listen to music. I especially like to play computer games and meet with my friends to play <a hreft="http://en.wikipedia.org/wiki/Munchkin_(card_game)">Munchkin</a> or other board games. </p>
                          
@@ -194,6 +194,7 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
+                                <li><i class="fa fa-birthday-cake"></i><span class="sr-only">Age:</span>20.05.1988</li>
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Dinslaken, Germany</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">julian.giesen@posteo.de</a></li>
                                 <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://juliangiesen.de</a></li>
@@ -384,7 +385,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><a href="http://getbootstrap.com/" target="_blank"><i class="fa fa-external-link"></i> Bootstrap 3.2</a></li>
-                                <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank"><i class="fa fa-external-link"></i> FontAwsome 4.1</a></li>
+                                <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank"><i class="fa fa-external-link"></i> FontAwsome 4.2</a></li>
                                 <li><a href="http://jquery.com/" target="_blank"><i class="fa fa-external-link"></i> jQuery</a></li>
                                <!-- <li><a href="http://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fa fa-external-link"></i> GitHub Activity Stream</a></li>
                                 
