--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <meta name="author" content="{{ site.author.name }}">
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <link rel="shortcut icon" href="favicon.ico">  
+    <link rel="shortcut icon" href="{{ site.baseurl }}favicon.ico">  
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
     <!-- Global CSS -->
@@ -26,10 +26,10 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- Javascript -->          
-    <script type="text/javascript" src="assets/plugins/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
-    <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script> 
+    <script type="text/javascript" src="{{ site.baseurl }}assets/plugins/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}assets/plugins/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
+    <script type="text/javascript" src="{{ site.baseurl }}assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script> 
     <!-- custom js -->
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}assets/js/main.js"></script>
 </head> 
