--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
         <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">3rd Wave Media</a> for developers</small>
     </div>
 </br>
-    <div class="container text-center">&copy; <a href="http://juliangiesen.de">{{ site.title }}</a>, {{ site.copyright }} &ndash; <a href="/imprint/">Imprint</a>, <a href="/imprint/credits/">Credits</a>
+    <div class="container text-center">&copy; <a href="{{ site.baseurl }}">{{ site.title }}</a>, {{ site.copyright }} &ndash; <a href="/imprint/">Imprint</a>, <a href="/imprint/credits/">Credits</a>
     </div>
 </div>
