--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -4,14 +4,13 @@
         <div class="profile-content pull-left">
             <h1 class="name">Julian Giesen</h1>
             <h2 class="desc">Software Developer</h2>   
-            <ul class="social list-inline">
-                <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->                   
+            <ul class="social list-inline">                
                 <li><a href="https://plus.google.com/+JulianGiesen"><i class="fa fa-google-plus"></i></a></li>
                 <li><a href="https://www.xing.com/profile/Julian_Giesen2"><i class="fa fa-xing"></i></a></li>
                 <li><a href="https://www.linkedin.com/pub/julian-giesen/97/1a1/707"><i class="fa fa-linkedin"></i></a></li>
                 <li class="last-item"><a href="https://github.com/rikushan"><i class="fa fa-github-alt"></i></a></li>                  
             </ul>  
-        </div><!--//profile-->  
+        </div> 
         <a class="btn btn-info pull-right" target="_blank"><i class="fa fa-cog"></i> Under Construction</a> 
-    </div><!--//container-->
+    </div>
 </div>
