removed about and added showcase of services

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,13 +14,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <!--<li>
                     <a class="page-scroll" href="{{ site.baseurl }}#about">Über mich</a>
-                </li>
-              <!--  <li>
-                    <a class="page-scroll" href="#services">Leistungen</a>
-                </li>
+                </li>-->
                 <li>
+                    <a class="page-scroll" href="{{ site.baseurl }}#services">Leistungen</a>
+                </li>
+                <!--<li>
                     <a class="page-scroll" href="#portfolio">Referenzen</a>
                 </li>-->
                 <li>
