--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,6 +10,7 @@
                 <p> Sie können mir eine E-Mail schreiben oder mich über eines der angegebenen Netzwerke erreichen. </p>
 
                 <p> Ich werde Ihnen schnellstmöglich antworten.</p>
+                <br>
             </div>
         <!--<div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="https://twitter.com/{{ site.twitter_username }}">
@@ -17,28 +18,24 @@
                 <p>{{ site.twitter_username }}</p>
             </a>
         </div> -->
-        <div class="col-lg-2 col-lg-offset-1 text-center">
+        <div class="col-xs-3 text-center">
             <a href="mailto:{{ site.email }}">
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.email }}</p>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
+        <div class="col-xs-3 text-center">
             <a href="https://github.com/{{ site.github_username }}">
             <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.github_username }}</p>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
+        <div class="col-xs-3 text-center">
             <a href="https://www.xing.com/profile/{{ site.xing_name }}">
             <i class="fa fa-xing fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.name }}</p>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
+        <div class="col-xs-3 text-center">
             <a href="https://www.linkedin.com/in/{{ site.linkedin_name }}">
             <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.name }}</p>
             </a>
         </div>
 
