--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,23 +1,23 @@
-<section id="services">
-    <div class="container">
+<section class="bg-dark" id="services">
+  <!--  <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Meine Leistungen</h2>
                 <hr class="primary">
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-xs-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-android wow bounceIn text-primary"></i>
                     <i class="fa fa-4x fa-apple wow bounceIn text-primary"></i>
-                    <h3>Android und iOS Apps</h3>
-                    <p class="text-muted">Native Entwicklung von Android und iOS Apps für höhere Anforderungen und beste Performance sowie nahtlose Integration in das entsprechende Betriebssystem.</p>
+                    <h3>Mobile Apps</h3>
+                    <p class="text-muted">Android und iOS Apps entwickel ich nativ, für höchste Ansprüche.</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <!--<div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-mobile wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <i class="fa fa-4x fa-laptop wow bounceIn text-primary" data-wow-delay=".1s"></i>
@@ -25,15 +25,15 @@
                     <h3>Web-Apps</h3>
                     <p class="text-muted">Umsetzung einfacher Web-Apps bei niedrigeren Anforderungen, die auch als Hybrid-App plattformübergreifend verfügbar sind.</p>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            </div>-->
+            <div class="col-xs-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-gamepad wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Games</h3>
-                    <p class="text-muted">Leidenschaftliche Entwicklung von 2D- und 3D-Games mit Unity3D. Ein Game kann für alle von Unity unterstützen Mobilen-, Desktop- und Konsolenplattformen umgesetzt werden.</p>
+                    <p class="text-muted">Zur Umsetzung von 2D- und 3D-Games verwende ich die Unity Game Engine.</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-xs-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-comments-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Kommunikation</h3>
