--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -348,3 +348,10 @@ img::-moz-selection {
 body {
     -webkit-tap-highlight-color: $theme-dark;
 }
+
+.form-control:focus {
+  border-color: $theme-primary;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px darken($theme-primary, 10%);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px darken($theme-primary, 10%);
+}
