--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@
 // }
 
 // variables.less
-$theme-primary: #689F38; //#F05F40;
+$theme-primary: #00BFA5; //#689F38; //#F05F40;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
