contact form fix

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -21,15 +21,15 @@
                         <div class="row">
                             <div class="col-lg-12 text-center">
                                 <div class="control-group form-group">
-                                    <input type="text" class="form-control" placeholder="Name *" id="name" required data-validation-required-message="Bitte geben Sie Ihren Namen oder Firmennamen an.">
+                                    <input type="text" name="name" class="form-control" placeholder="Name *" id="name" required data-validation-required-message="Bitte geben Sie Ihren Namen oder Firmennamen an.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="email" class="form-control" placeholder="E-Mail *" id="email" required data-validation-required-message="Bitte geben Sie Ihre E-Mail Adresse an.">
+                                    <input type="email" name="_replyto" class="form-control" placeholder="E-Mail *" id="email" required data-validation-required-message="Bitte geben Sie Ihre E-Mail Adresse an.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <textarea rows="7" class="form-control" placeholder="Nachricht *" id="message" required data-validation-required-message="Bitte geben Sie eine Nachticht ein."></textarea>
+                                    <textarea rows="7" name="content" class="form-control" placeholder="Nachricht *" id="message" required data-validation-required-message="Bitte geben Sie eine Nachticht ein."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
