--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -39,7 +39,7 @@
                                 <button type="submit" class="btn btn-primary btn-xl page-scroll">Senden</button>
                             </div>
                         </div>
-                        <input type="hidden" name="_next" value="{{ site.baseurl }}/danke.html" />
+                        <input type="hidden" name="_next" value="{{ site.baseurl }}danke/index.html" />
                         <input type="hidden" name="_subject" value="Kontaktanfrage" />
                     </form>
                   <br>
