moved credits to own folder

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
                   </li>
                     &ndash;
                   <li>
-                    <a href="{{ site.baseurl }}imprint/credits/">Credits</a>
+                    <a href="{{ site.baseurl }}credits/">Credits</a>
                   </li>
               </ul>
           </div>
