--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,11 +6,17 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-  {% include services.html %}
-  <!--{% include portfolio.html %}-->
-  <!--{% include aside.html %}-->
-  {% include contact.html %}
-  {% include footer.html %}
+  <div id="container">
+    <div id="body">
+      {% include services.html %}
+      {% include contact.html %}
+        <!--{% include portfolio.html %}-->
+        <!--{% include aside.html %}-->
+    </div>
+    <div id="footer">
+    {% include footer.html %}
+    </div>
+</div>
   {% include scripts.html %}
 </body>
 
