--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,9 @@
+
 html,
 body {
+    margin: 0;
+    padding: 0;
     height: 100%;
-    width: 100%;
 }
 
 body {
@@ -49,6 +51,13 @@ p {
 .bg-dark {
     background-color: $theme-dark;
     color: white;
+}
+
+.bg-image {
+    @include background-cover;
+    background-position: center;
+    background-image: url('../img/header.jpg');
+    background-color: $theme-primary;
 }
 
 .text-faded {
@@ -354,4 +363,29 @@ body {
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px darken($theme-primary, 10%);
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px darken($theme-primary, 10%);
+}
+
+#container {
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
+}
+#body {
+  margin: auto;
+}
+#footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+}
+
+body:before {
+  content:"";
+  height:100%;
+  float:left;
+  width:0;
+  margin-top:-32767px;/* thank you Erik J - negate effect of float*/
 }
