--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,7 +9,7 @@
     </div> -->
     <div class="container">
         <div class="row">
-            <div class="col-xs-1 col-md-4 text-center">
+            <div class="col-sm-1 col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-android wow bounceIn text-primary"></i>
                     <i class="fa fa-4x fa-apple wow bounceIn text-primary"></i>
@@ -26,14 +26,14 @@
                     <p class="text-muted">Umsetzung einfacher Web-Apps bei niedrigeren Anforderungen, die auch als Hybrid-App plattformübergreifend verfügbar sind.</p>
                 </div>
             </div>-->
-            <div class="col-xs-1 col-md-4 text-center">
+            <div class="col-sm-1 col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-gamepad wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Games</h3>
                     <p class="text-muted">Zur Umsetzung von 2D- und 3D-Games verwende ich die Unity Game Engine.</p>
                 </div>
             </div>
-            <div class="col-xs-1 col-md-4 text-center">
+            <div class="col-sm-1 col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-comments-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Kommunikation</h3>
