--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -4,10 +4,12 @@
 {% include head.html %}
 
 <body id="page-top">
-    {% include nav.html %} {% include header.html %}
+    {% include nav.html %}
+    {% include header.html %}
     <div id="container">
         <div id="body">
-            {% include services.html %} {% include contact.html %}
+            {% include services.html %}
+            {% include contact.html %}
             <!--{% include portfolio.html %}-->
             <!--{% include aside.html %}-->
         </div>
