--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -8,15 +8,18 @@
                 <hr class="light">
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <p class="text-faded">Meine Passion ist die Entwicklung von kleinen aber spannenden Games, die Lust auf mehr machen.
+                <p class="text-faded">Meine Passion ist die Entwicklung von kleinen aber spannenden Games,
+                  die Lust auf mehr machen.
                 </p>
                 <p class="text-faded">
-                    Auch bei der Entwicklung von Apps verfolge ich das Ziel einer intuitiven Benutzung, gekoppelt mit einem ansprechenden Design.
+                  Auch bei der Entwicklung von Apps verfolge ich das Ziel einer intuitiven Benutzung, gekoppelt mit einem ansprechenden Design.
 
                 </p>
                 <p class="text-faded">
-                    Meine ersten Programmiererfahrungen habe ich in C++ gemacht. Nach mehrjähriger Anwendung von C++ fand ich mich in Sprachen wie C# und Java wieder. Das führte mich zum einen zu Unity und der Entwicklung von Games in C# und zum anderen zur Entwicklung von
-                    Android Apps in Java. Wenig später fand ich auch Interesse an der Umsetzung von Apps für iOS und Web-Apps.
+                  Meine ersten Programmiererfahrungen habe ich in C++ gemacht.
+                  Nach mehrjähriger Anwendung von C++ fand ich mich in Sprachen wie C# und Java wieder.
+                  Das führte mich zum einen zu Unity und der Entwicklung von Games in C# und zum anderen zur Entwicklung von Android Apps in Java.
+                  Wenig später fand ich auch Interesse an der Umsetzung von Apps für iOS und Web-Apps.
                 </p>
             </div>
             <!--<div class="col-lg-8 col-lg-offset-2 text-center">
