undo contact update to hold when ready

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,12 +7,13 @@
                 <p>
                     Wenn Sie Interesse haben, Ihr nächstes Projekt mit mir zu starten oder mir einfach eine nette Nachricht hinterlassen wollen, dann treten Sie doch gerne mit mir in Kontakt.
                 </p>
-                <p>
+                <!-- <p>
                     Nutzen Sie für eine Kontaktaufnahme einfach das dafür vorgesehene Formular und ich senden Ihnen mein Portfolio als PDF mit zusätzlichen Kontaktdaten zu.
                 </p>
 
-                <p> Sie erreichen mich natürlich auch über eines der angegebenen Netzwerke. </p>
-
+                <p> Sie erreichen mich natürlich auch über eines der angegebenen Netzwerke. </p> -->
+                <p> Nutzen Sie für eine Kontaktaufnahme einfach das dafür vorgesehene Formular
+                                  oder kontaktieren Sie mich über eines der angegebenen Netzwerke. </p>
                 <p> Ich werde Ihnen schnellstmöglich antworten.</p>
             </div>
 
@@ -47,7 +48,7 @@
                                 <button type="submit" class="btn btn-primary btn-xl page-scroll">Kontakt aufnehmen</button>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-lg-8 col-lg-offset-2">
                                 <br>
                                 <h3>Nutzen Sie die Vorteile des Kontaktformulars</h3>
@@ -64,7 +65,7 @@
                                 </ul>
                                 <br>
                             </div>
-                        </div>
+                        </div> -->
                         <input type="hidden" name="_next" value="{{ site.baseurl }}danke/" />
                         <input type="hidden" name="_subject" value="Kontaktanfrage" />
                     </form>
