added google analytics and updated imprint

--- a/_layouts/credits.html
+++ b/_layouts/credits.html
@@ -21,6 +21,9 @@
     </div>
   </div>
   {% include scripts.html %}
+  {% if jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </body>
 
 </html>
