--- a/_layouts/thanks.html
+++ b/_layouts/thanks.html
@@ -20,6 +20,9 @@
     </div>
 	</div>
   {% include scripts.html %}
+  {% if jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </body>
 
 </html>
