--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -18,6 +18,9 @@
     </div>
 </div>
   {% include scripts.html %}
+  {% if jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </body>
 
 </html>
