removed iOS information

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Freelance <br/> Mobile App & Game <br/> Developer</h1>
+            <h1>Freelance <br/> Android & Game <br/> Developer</h1>
             </p>
             <img src="{{ site.baseurl }}img/team/profile3.jpg" class="img-responsive img-circle center-block" alt="" width="20%" height="20%">
             <br/>
