--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,9 +12,8 @@
             <div class="col-sm-1 col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-android wow bounceIn text-primary"></i>
-                    <i class="fa fa-4x fa-apple wow bounceIn text-primary"></i>
-                    <h3>Mobile Apps</h3>
-                    <p class="text-muted">Android und iOS Apps entwickel ich nativ, für höchste Ansprüche.</p>
+                    <h3>Android Apps</h3>
+                    <p class="text-muted">Android Apps entwickel ich nativ, für höchste Ansprüche.</p>
                 </div>
             </div>
             <!--<div class="col-lg-3 col-md-6 text-center">
