new profile pic

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
           <div class="col-md-6">
               <ul class="list-inline quicklinks">
                   <li>
-                    <a href="{{ site.baseurl }}imprint/">Imprint</a>
+                    <a href="{{ site.baseurl }}imprint/">Impressum</a>
                   </li>
                     &ndash;
                   <li>
